Manufactoring/force-app/main/default/objects/mfg_Inventory_Product_Reservation__c/mfg_Inventory_Product_Reservation__c.object-meta.xml
<CustomObject>
    <label>Inventory Product Reservation</label>
    <nameField>
        <label>Inventory Product Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Product Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>