Manufactoring/force-app/main/default/objects/mfg_Inventory_Product_Reservation__c/fields/mfg_Inventory__c.field-meta.xml
<CustomField>
    <fullName>mfg_Inventory__c</fullName>
    <label>Inventory</label>
    <referenceTo>mfg_Inventory__c</referenceTo>
    <relationshipLabel>Inventory Product Reservations</relationshipLabel>
    <relationshipName>Inventory_Product_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>