Manufactoring/force-app/main/default/objects/mfg_Inventory_Product_Reservation__c/fields/mfg_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Inventory Product Reservations</relationshipLabel>
    <relationshipName>Inventory_Product_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>