Manufactoring/force-app/main/default/objects/mfg_Inventory_Product_Reservation__c/fields/mfg_Product_Reserved_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product_Reserved_Quantity__c</fullName>
    <label>Product Reserved Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>